add redis cache to token control middleware
